# TheReseacher

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: graph.py  main.py  prompts.py  state.py
backend/app/agents/: critic.py  researcher.py  supervisor.py  writer.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentActivityLog.jsx  ReportView.jsx  TopicInput.jsx
