[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.49.0",
]
